# TianJi

code/flight_csv_visualizer/: FlightCSVVisualizer.spec  README.md  main.py  pyproject.toml  requirements.txt
code/flight_csv_visualizer/scripts/: build_windows.bat  run_dev.bat
code/flight_csv_visualizer/src/flightvis/: app.py  constants.py  resources.py  settings.py
code/flight_csv_visualizer/src/flightvis/core/: data_manager.py  event_bus.py  project_manager.py  visibility_manager.py
code/flight_csv_visualizer/src/flightvis/io/: column_detector.py  csv_loader.py  export_image.py  project_io.py
code/flight_csv_visualizer/src/flightvis/models/: __init__.py  curve_config.py  curve_override.py  data_file.py  plot_config.py  project_config.py  serialization.py  tab_config.py  visibility.py
code/flight_csv_visualizer/src/flightvis/plotting/: downsample.py  mpl_canvas.py  plot_renderer.py  style.py  trajectory_renderer.py
code/flight_csv_visualizer/src/flightvis/ui/: add_curve_widget.py  column_mapping_dialog.py  compare_mode_widget.py  curve_manager_dialog.py  custom_plot_cell.py  custom_plot_settings_dialog.py  display_settings_widget.py  file_manager_dialog.py  import_files_dialog.py  legend_bar.py  main_window.py  new_tab_dialog.py  plot_cell_base.py  preset_plot_cell.py  preset_plot_settings_dialog.py  tab_grid_widget.py  trajectory_curve_manager_dialog.py  trajectory_view.py
code/flight_csv_visualizer/tests/: test_column_detector.py  test_data_manager.py  test_downsample.py  test_gui_smoke.py  test_project_serialization.py  test_visibility_manager.py
(+5 files in other folders)
