[project]
name = "flight-csv-visualizer"
version = "0.1.0"
description = "Lightweight desktop visualizer for flight CSV data"
requires-python = ">=3.10"
dependencies = [
  "PySide6==6.8.3",
  "pandas",
  "numpy",
  "matplotlib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
